--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: "GlanceCam"
 email: "support@cdf1982.com"
 description: "A native IP camera viewer for Mac, with support for standard protocols and lots of features"
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://glancecam.com" # the base hostname & protocol for your site, e.g. http://example.com or  https://tradejk.netlify.com
+url: "https://glancecam.app" # the base hostname & protocol for your site, e.g. http://example.com or  https://tradejk.netlify.com
 facebook_url: 
 twitter_url: 
 github_url:  
