--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "GlanceCam"
 email: "support@cdf1982.com"
-description: "GlanceCam is a powerful, native IP camera viewer for Mac that supports standard protocols (RTSP, HTTP/MJPEG) and offers features like grids, multiple windows, and full-screen mode."
+description: "Powerful, private and most loved native IP camera viewer for Mac for standard protocols like RTSP."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://glancecam.app"
 author: "Cesare Forelli"
