--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "GlanceCam"
 email: "support@cdf1982.com"
-description: "Powerful, private and most loved native IP camera viewer for Mac for standard protocols like RTSP."
+description: "The best native IP camera viewer for Mac for standard streaming protocols like RTSP. 6 years of constant updates and more than 620 App Store ratings."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://glancecam.app"
 author: "Cesare Forelli"
