Once more with feeling

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "GlanceCam"
 email: "support@cdf1982.com"
-description: "The best native IP camera viewer for Mac for standard streaming protocols like RTSP. 6 years of constant updates and more than 620 App Store ratings."
+description: "The best IP camera viewer for Mac RTSP streaming. Powerful, native and with more than 620 App Store ratings in 6 years of updates."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://glancecam.app"
 author: "Cesare Forelli"
